Fix overflow bug

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -9,4 +9,5 @@ footer {
 .footer-copyright {
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
+    text-align: center;
 }
