--- a/styles/general.css
+++ b/styles/general.css
@@ -2,6 +2,7 @@ body, html {
     padding: 0;
     margin: 0;
     background-color: #121212;
+    overflow-x: hidden;
 }
 
 * {
